# JsonSpeller

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: conf.py  requirements
docs/_templates/: index.rst
docs/api/: json_speller.rst
docs/examples/: index.rst
json_speller/: __init__.py  json_speller.py
under_development/: chatgpt_spellchecker.ipynb  json_speller.ipynb
under_development/json_speller_data/: 2023_9_30_2023_10_08.pkl  missing_words_from_dwyl.txt  symspell_freq_dict.txt  text_filter.pkl  to_be_tested.csv  updating_word_list.ipynb  user.pkl
