[metadata]
name = json_speller
version = attr: json_speller.__version__
description = Python json_speller
long_description = file: README.md
long_description_content_type = text/markdown
author = Heesang Lee
url = https://github.com/jasonheesanglee/json_speller
keywords = spellchecker, json_speller, levenshtine, json
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: English
    License :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    spacy>=3.7.2
    python-Levenshtein>=0.23.0
    transformers>=4.35.0
    torch>=2.1.0
    tqdm>=4.66.1

[options.packages.find]
include = json_speller
